--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,23 @@
 language: node_js
 node_js: stable
-
-# 只监听 source 分支的改动
 branches:
   only:
-    - hexo
-
-# 缓存依赖，节省持续集成时间
+  - hexo
 cache:
   directories:
-    - node_modules
-    - themes
-
+  - node_modules
+  - themes
 install:
-  - npm install
-
+- npm install
 script:
-  - hexo clean
-  - hexo g
-
+- hexo clean
+- hexo g
 after_script:
-  - chmod +x ./deploy.sh # 添加可执行权限
-  - ./deploy.sh
+- scp -o stricthostkeychecking=no -r public/* aitical@101.132.117.145:/home/aitical/my-blog/public/
+- chmod +x ./deploy.sh
+- "./deploy.sh"
+before_install:
+- openssl aes-256-cbc -K $encrypted_69623dba2a4b_key -iv $encrypted_69623dba2a4b_iv
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
+- echo -e "Host 101.132.117.145\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
