--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Aitical
 subtitle: 未来可期
-description: 随便写写。
+description: 随便写写
 keywords: CV,Deep Learning, Paper Reading
 author: Aitical
 language: zh-CN
