--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
-    "hexo-symbols-count-time": "git+https://github.com/theme-next/hexo-symbols-count-time.git",
+    "hexo-symbols-count-time": "^0.6.0",
     "inject": "^1.0.0-beta2",
     "marked": "^0.7.0"
   }
